Day19_assessment/priya-assignment-2/eks-cluster-priya.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: ECS Fargate Service with Application Load Balancer

Parameters:

  VpcId:
    Type: AWS::EC2::VPC::Id

  PublicSubnet1:
    Type: AWS::EC2::Subnet::Id

  PublicSubnet2:
    Type: AWS::EC2::Subnet::Id

  ECRImage:
    Type: String
    Description: ECR image URI
    Default: 386757865964.dkr.ecr.us-east-1.amazonaws.com/priya-eks-app-repository:latest

Resources:

  ECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: priya-eks-cluster-day19

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP traffic
      VpcId: !Ref VpcId

      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  ECSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ECS Tasks
      VpcId: !Ref VpcId

      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupId: !Ref ALBSecurityGroup

  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: priya-day19-alb
      Scheme: internet-facing
      Type: application

      SecurityGroups:
        - !Ref ALBSecurityGroup

      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: priya-ecs-targets
      Port: 8080
      Protocol: HTTP
      TargetType: ip
      VpcId: !Ref VpcId

      HealthCheckPath: /
      HealthCheckProtocol: HTTP

  Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP

      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup

    EKSClusterRole:
      Type: AWS::IAM::Role
      Properties:
        RoleName: eksClusterRolePriya

        AssumeRolePolicyDocument:
          Version: '2012-10-17'
          Statement:
            - Effect: Allow

              Principal:
                Service:
                  - eks.amazonaws.com

              Action:
                - sts:AssumeRole

        ManagedPolicyArns:
          - arn:aws:iam::aws:policy/service-role/AmazonEKSClusterPolicy
    NodeInstanceRole:
      Type: AWS::IAM::Role
      Properties:
        RoleName: eksNodeInstanceRolePriya

        AssumeRolePolicyDocument:
          Version: '2012-10-17'
          Statement:
            - Effect: Allow

              Principal:
                Service:
                  - ec2.amazonaws.com

              Action:
                - sts:AssumeRole

        ManagedPolicyArns:
          - arn:aws:iam::aws:policy/AmazonEKSWorkerNodepolicy
          - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
          - arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy

    EKSCluster:
      Type: AWS::EKS::Cluster
      Properties:
        ClusterName: priya-ecs-cluster-day19
